[tool.poetry]
name = "axel"
version = "0.1.0"
description = "Motorola 6800 assembler"
authors = ["Jahan Addison <info@jahanaddison.com>"]
license = "GPL-3.0"
repository = "https://github.com/jahan-addison/axel"
keywords = ["assembler", "assembly", "6800", "motorola", "python3"]
classifiers = [
    "Development Status :: 0 - Alpha",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]

[tool.poetry.dependencies]
python = "^3.7"
mypy_extensions = "^0.4.1"
bitarray = "^1.0"
pampy = {git = "https://github.com/santinic/pampy"}
[tool.poetry.dev-dependencies]
pytest-cov = "^2.8"
mypy = "^0.720.0"
flake8 = "^3.7"
pytest = "^5.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
