[metadata]
name = Axel
version = 0.1.0
description = Motorola 6800 assembler
authors = Jahan Addison <info@jahanaddison.com>,
license = GPL-3.0
home-page = https://github.com/jahan-addison/Axel
long-description = file: README.md
platform = any
classifiers =
    Development Status :: Alpha
    Operating System :: OS Independent
    Programming Language :: Python
	Programming Language :: Python :: 3.7

